kubernetesFiles/coffeehouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffeehouse-service
  # namespace: coffeehouse-app
spec:
  selector:
    app: coffeehouse
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8054
      targetPort: 8054
