kubernetesFiles/coffeehouse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffeehouse-ingress
  # namespace: coffeehouse-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
 
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: coffeehouse-service
            port: 
              number: 8054
